k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ulu-api
  namespace: ulu
  labels:
    app: ulu-api
spec:
  type: ClusterIP
  selector:
    app: ulu-api
  ports:
    - port: 8000
      targetPort: 8000
      name: http
